[package]
name = "kogan-cli"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
clap = "3.0.0-beta.4"
kogan = { path = "../kogan" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
tracing-subscriber = "0.2.24"